<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context = ".MainActivity"
    android:layout_width="match_parent"
    android:layout_height = "match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height = "match_parent">

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/icon_logo_white"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:id = "@+id/name"
            android:text = "@string/app_name"
            android:textSize = "30dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height = "wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal = "true"
            android:layout_marginTop="10dp" />

        <TextView
            android:id = "@+id/version"
            android:text = "@string/app_version"
            android:textSize = "10dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/name"
            android:layout_alignRight="@+id/name" />

        <EditText
            android:id = "@+id/mail"
            android:hint = "@string/hint_mail"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/icon_mail_fixed"
            android:focusable = "true"
            android:inputType="textEmailAddress"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/version"
            android:layout_centerHorizontal = "true"
            android:layout_marginTop = "50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <EditText
            android:id = "@+id/pass"
            android:hint = "@string/hint_pass"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/icon_pasw_fixed"
            android:focusable = "true"
            android:inputType="textPassword"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/mail"
            android:layout_centerHorizontal = "true"
            android:layout_marginTop = "10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id = "@+id/forgot"
            android:text = "@string/href_forgot"
            android:textSize = "10dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/icon_reset_fixed"
            android:gravity="center_vertical"
            android:layout_width = "wrap_content"
            android:layout_height = "match_parent"
            android:layout_below = "@+id/pass"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/remember"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp" />

        <CheckBox
            android:id="@+id/remember"
            android:text="@string/check_remember"
            android:textSize = "10dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_toLeftOf="@+id/forgot"
            android:layout_alignLeft="@+id/pass"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/login"
            android:text="@string/button_login"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id = "@+id/agree"
            android:text = "@string/hint_agree"
            android:textSize = "10dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <Button
            android:id="@+id/quit"
            android:text="@string/button_quit"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/agree"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp" />
    </RelativeLayout>
</ScrollView>