<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context = ".CalculatorActivity"
    android:layout_width="match_parent"
    android:layout_height = "match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height = "match_parent">

        <ImageButton
            android:id="@+id/back"
            android:src="@drawable/icon_back"
            android:background="@null"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id = "@+id/page"
            android:text = "@string/pg_gpa"
            android:textSize = "20dp"
            android:textColor="@color/colorAccent"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_alignBottom="@+id/back"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp" />

        <RelativeLayout
            android:id="@+id/layout"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height = "match_parent"
            android:layout_below="@+id/back"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <View
                android:id="@+id/center"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <EditText
                android:id = "@+id/gpa_completed"
                android:background="@android:drawable/edit_text"
                android:hint = "@string/hint_gpa_completed"
                android:textColor="@color/colorAlternativeDark"
                android:textColorHint="@color/colorAccentDark"
                android:textCursorDrawable="@null"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/icon_entry_fixed"
                android:focusable = "true"
                android:inputType="numberDecimal"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_alignStart="@+id/center"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <EditText
                android:id = "@+id/credit_completed"
                android:background="@android:drawable/edit_text"
                android:hint = "@string/hint_credit_completed"
                android:textColor="@color/colorAlternativeDark"
                android:textColorHint="@color/colorAccentDark"
                android:textCursorDrawable="@null"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/icon_entry_fixed"
                android:focusable = "true"
                android:inputType="number"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_toLeftOf="@+id/gpa_completed"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp" />

            <View
                android:id="@+id/divider"
                android:background="@color/colorAlternativeDark"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/credit_completed"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id = "@+id/repeat"
                android:text = "@string/hint_repeat"
                android:textSize = "10dp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_below="@+id/divider"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/calculate"
                android:text="@string/button_calculate"
                android:textColor="@color/colorAccent"
                android:background="@color/colorAlternativeDark"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeat"
                android:layout_alignStart="@+id/center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/add"
                android:text="@string/button_add"
                android:textColor="@color/colorAccent"
                android:background="@null"
                android:drawableTop="@drawable/icon_add_fixed"
                android:gravity="center"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeat"
                android:layout_toLeftOf="@+id/calculate"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp" />
        </RelativeLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5486013930231502/8142603506">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</ScrollView>